--- a/california_housing_prediction.ipynb
+++ b/california_housing_prediction.ipynb
@@ -1793,7 +1793,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Performing the prediction using Lasso Regression"
+        "# Performing the prediction using Ridge Regression"
       ],
       "metadata": {
         "id": "es0rertFvG6Q"
@@ -1802,7 +1802,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Lasso regression can improve your model by automatically removing unnecessary features, reducing overfitting, and handling correlated variables better. It makes the model simpler and potentially more accurate by focusing only on the most important predictors."
+        "Ridge regression can improve your model by automatically removing unnecessary features, reducing overfitting, and handling correlated variables better. It makes the model simpler and potentially more accurate by focusing only on the most important predictors."
       ],
       "metadata": {
         "id": "EDQ3VsyEv4T3"
